fix for the most part the logo shudder on hover by using backface visibility

--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -42,6 +42,8 @@ body {
 
 .logo {
   height: 35px;
+  backface-visibility: hidden;
+  transform: scale(1);
 }
 
 .logo:hover {
@@ -63,6 +65,7 @@ in relation to itself so that it centers perfectly */
 
   /* fixes the animation so the text doesn't jump up slightly  */
   backface-visibility: hidden;
+  transform: scale(1);
 }
 
 .heading-primary-main {
